--- a/style.css
+++ b/style.css
@@ -50,10 +50,17 @@ main{
 .form{
     width: 100%;
 }
-.form input[type=range]{
+.loading{
     width: 80%;
-    display: block;
+    height: 10px;
+    background-color: white;
     margin: auto;
+}
+.load{
+    width: 80%;
+    height: 10px;
+    background-color: aqua;
+    /* margin: auto; */
 }
 .percent{
     display: flex;
